<resources>
    <string name="app_name">River Learning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_tasks">My Tasks</string>
    <string name="tasks_allocated_by_me">Tasks Allocated By Me</string>
    <string name="my_closed_tasks">My Closed Tasks</string>
    <string name="assess_closed_tasks">Assess Closed Tasks</string>

    <string name="my_evaluation">My Evaluation</string>
    <string name="quick_feedback">Quick Feedback</string>
    <string name="report_kpi_data">Report KPI Data</string>

    <string name="my_trainings">My Trainings</string>

    <string name="tasks">Tasks</string>
    <string name="assessments">Assessments</string>
    <string name="trainings">Trainings</string>
    <string name="profile">Profile</string>

    <string name="blank_spinner">------</string>
    <string name="ifeel">iFeel</string>

    <string-array name="repeat_task_spinner">
        <item>------</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="assess_task_spinner">
        <item>------</item>
        <item>Assessed</item>
        <item>Pending</item>
    </string-array>
    <string-array name="tenant_spinner">
        <item>------</item>
        <item>alpha</item>
        <item>beta</item>
        <item>gamma</item>
        <item>bakelite</item>
        <item>kleenage</item>
        <item>smart</item>
    </string-array>
    <string-array name="task_status_spinner">
        <item>------</item>
        <item>OPEN</item>
        <item>CLOSED</item>
        <item>WAITING</item>
        <item>IN PROGRESS</item>
    </string-array>
    <string-array name="rating_spinner">
        <item>------</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="performance_spinner">
        <item>------</item>
        <item>Excellent</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Average</item>
        <item>Needs Improvement</item>
    </string-array>
</resources>