<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/myTasksFragment"
            android:title="@string/my_tasks"
            android:icon="@drawable/ic_baseline_home_white"/>
        <item
            android:id="@+id/tasksAllocatedFragment"
            android:icon="@drawable/ic_baseline_edit_white"
            android:title="@string/tasks_allocated_by_me" />
        <item
            android:id="@+id/closedTasksFragment"
            android:title="@string/my_closed_tasks"
            android:icon="@drawable/ic_baseline_check_white"/>
        <item
            android:id="@+id/assessTasksFragment"
            android:title="@string/assess_closed_tasks"
            android:icon="@drawable/ic_baseline_thumb_up_white"/>
    </group>
</menu>