<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_drawer_nav_graph"
    app:startDestination="@id/myTasksFragment">

    <fragment
        android:id="@+id/myTasksFragment"
        android:name="com.rgdgr8.riverlearning.MyTasksFragment"
        android:label="@string/my_tasks"
        tools:layout="@layout/fragment_my_tasks" >
        <action
            android:id="@+id/action_myTasksFragment_to_commentTaskFragment"
            app:destination="@id/commentTaskFragment" />
        <action
            android:id="@+id/action_myTasksFragment_to_editMyTaskFragment"
            app:destination="@id/editMyTaskFragment" />
        <action
            android:id="@+id/action_myTasksFragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tasksAllocatedFragment"
        android:name="com.rgdgr8.riverlearning.TasksAllocatedFragment"
        android:label="@string/tasks_allocated_by_me"
        tools:layout="@layout/fragment_tasks_allocated" >
        <action
            android:id="@+id/action_tasksAllocatedFragment_to_editTaskFragment"
            app:destination="@id/editAllocatedTaskFragment" />
        <action
            android:id="@+id/action_tasksAllocatedFragment_to_commentTaskFragment"
            app:destination="@id/commentTaskFragment" />
        <action
            android:id="@+id/action_tasksAllocatedFragment_to_createNewTaskFragment"
            app:destination="@id/createNewTaskFragment" />
        <action
            android:id="@+id/action_tasksAllocatedFragment_to_taskDetailsFragment"
            app:destination="@id/taskDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/closedTasksFragment"
        android:name="com.rgdgr8.riverlearning.ClosedTasksFragment"
        android:label="@string/my_closed_tasks"
        tools:layout="@layout/fragment_closed_tasks" />
    <fragment
        android:id="@+id/assessTasksFragment"
        android:name="com.rgdgr8.riverlearning.AssessTasksFragment"
        android:label="@string/assess_closed_tasks"
        tools:layout="@layout/fragment_assess_tasks" >
        <action
            android:id="@+id/action_assessTasksFragment_to_assessmentOfTaskFragment"
            app:destination="@id/assessmentOfTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/myEvaluationFragment"
        android:name="com.rgdgr8.riverlearning.MyEvaluationFragment"
        android:label="@string/my_evaluation"
        tools:layout="@layout/fragment_my_evaluation" />
    <fragment
        android:id="@+id/reportKpiFragment"
        android:name="com.rgdgr8.riverlearning.ReportKpiFragment"
        android:label="@string/report_kpi_data"
        tools:layout="@layout/fragment_report_kpi" />
    <fragment
        android:id="@+id/myTrainingsFragment"
        android:name="com.rgdgr8.riverlearning.MyTrainingsFragment"
        android:label="@string/my_trainings"
        tools:layout="@layout/fragment_my_trainings" >
        <action
            android:id="@+id/action_myTrainingsFragment_to_trainingFeedbackFragment"
            app:destination="@id/trainingFeedbackFragment" />
        <action
            android:id="@+id/action_myTrainingsFragment_to_trainingEnrollFragment"
            app:destination="@id/trainingEnrollFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.rgdgr8.riverlearning.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/editAllocatedTaskFragment"
        android:name="com.rgdgr8.riverlearning.EditAllocatedTaskFragment"
        android:label="Update Task"
        tools:layout="@layout/fragment_edit_allocated_task" >
    </fragment>
    <fragment
        android:id="@+id/commentTaskFragment"
        android:name="com.rgdgr8.riverlearning.CommentTaskFragment"
        android:label="Comment"
        tools:layout="@layout/fragment_comment_task" >
    </fragment>
    <fragment
        android:id="@+id/editMyTaskFragment"
        android:name="com.rgdgr8.riverlearning.EditMyTaskFragment"
        android:label="Update Task"
        tools:layout="@layout/fragment_edit_my_task" >
    </fragment>
    <fragment
        android:id="@+id/createNewTaskFragment"
        android:name="com.rgdgr8.riverlearning.CreateNewTaskFragment"
        android:label="Create New Task"
        tools:layout="@layout/fragment_create_new_task" >
    </fragment>
    <fragment
        android:id="@+id/assessmentOfTaskFragment"
        android:name="com.rgdgr8.riverlearning.AssessmentOfTaskFragment"
        android:label="Assess Task"
        tools:layout="@layout/fragment_assessment_of_task" />
    <fragment
        android:id="@+id/taskDetailsFragment"
        android:name="com.rgdgr8.riverlearning.TaskDetailsFragment"
        android:label="Task Details"
        tools:layout="@layout/fragment_task_details" />
    <fragment
        android:id="@+id/trainingFeedbackFragment"
        android:name="com.rgdgr8.riverlearning.TrainingFeedbackFragment"
        android:label="Training Feedback"
        tools:layout="@layout/fragment_training_feedback" />
    <fragment
        android:id="@+id/trainingEnrollFragment"
        android:name="com.rgdgr8.riverlearning.TrainingEnrollFragment"
        android:label="Enroll"
        tools:layout="@layout/fragment_training_enroll" />
    <fragment
        android:id="@+id/iFeelFragment"
        android:name="com.rgdgr8.riverlearning.iFeelFragment"
        android:label="fragment_i_feel"
        tools:layout="@layout/fragment_i_feel" />
</navigation>